Service quase todo completo
faltando apenas as que o Kayke irá desenvolver